Added UI updates