@@ -3,7 +3,6 @@ package org.ubos.apps.ubosstat;
 import android.app.Activity;
 import android.app.AlarmManager;
 import android.app.PendingIntent;
-import android.app.ProgressDialog;
 import android.content.Context;
 import android.content.Intent;
 import android.database.Cursor;
@@ -38,13 +37,12 @@ import com.google.gson.GsonBuilder;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
+import org.ubos.apps.ubosstat.utility.Global;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Calendar;
-import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -58,25 +56,17 @@ import fragments.FragmentOne;
 import fragments.FragmentTwo;
 import fragments.TabsFragmentOne;
 import fragments.TabsFragmentThree;
-import fragments.TabsFragmentTwo;
 import model.DataItem;
 import model.Indicator;
 import model.SyncIndicator;
 import services.SampleBC;
-import xml.ToursPullParser;
 
 
 public class MainActivity extends ActionBarActivity
         implements NavigationDrawerFragment.NavigationDrawerCallbacks {
 
-    /**
-     * Fragment managing the behaviors, interactions and presentation of the navigation drawer.
-     */
     private NavigationDrawerFragment mNavigationDrawerFragment;
 
-    /**
-     * Used to store the last screen title. For use in {@link #restoreActionBar()}.
-     */
     private CharSequence mTitle;
     private List<Fragment> fragmentList = new ArrayList<>();
     private List<String> titleList = new ArrayList<>();
@@ -84,28 +74,21 @@ public class MainActivity extends ActionBarActivity
     private ViewPager viewPager;
     private TextTabsAdapter adapter;
     private TabLayout tabLayout;
-   private  ArrayList nativeList = new ArrayList();
+    private ArrayList nativeList = new ArrayList();
 
     ArrayList<DataItem> nativeIndicators = new ArrayList<DataItem>();
 
     IndicatorsDataSource datasource;
     Cursor indicatorItems, nativeIndicatorItems, updateNativeIndicators;
-    long nativeDBTimeStamp ;
-    //private static final String ENDPOINT = "https://kylewbanks.com/rest/posts.json";
-    private static final String ENDPOINT = "http://192.168.8.100/ubos_app";
-     private static final String json_updates_for_indicators = "http://192.168.8.100/ubos_app/check_updates.php";
-   // private static final String json_updates_for_indicators = "http://192.168.8.101/ubos_app/test_post.php";
+    long nativeDBTimeStamp;
 
-  // List<Indicator> storeUpdateIndicators = new ArrayList<Indicator>();
+    private static final String ENDPOINT = Global.ENDPOINT;
+    private static final String json_updates_for_indicators = Global.json_updates_for_indicators;
 
-    ArrayList<String> storeUpdateIndicators =new ArrayList<String>() ;
-
+    ArrayList<String> storeUpdateIndicators = new ArrayList<String>();
     private RequestQueue requestQueue;
-
     HashMap<String, String> queryValues;
-
     private Gson gson;
-
 
     private ArrayList<Indicator> columnArray3 = new ArrayList<Indicator>();
 
@@ -114,69 +97,35 @@ public class MainActivity extends ActionBarActivity
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        // set the action bar
-
-
         setContentView(R.layout.activity_main);
 
         datasource = new IndicatorsDataSource(this);
         datasource.open();
 
-        /**
-        // BroadCase Receiver Intent Object
-        Intent alarmIntent = new Intent(getApplicationContext(), SampleBC.class);
-        // Pending Intent Object
-        PendingIntent pendingIntent = PendingIntent.getBroadcast(getApplicationContext(), 0, alarmIntent, PendingIntent.FLAG_UPDATE_CURRENT);
-        // Alarm Manager Object
-        AlarmManager alarmManager = (AlarmManager) getApplicationContext().getSystemService(Context.ALARM_SERVICE);
-        // Alarm Manager calls BroadCast for every Ten seconds (10 * 1000), BroadCase further calls service to check if new records are inserted in
-        // Remote MySQL DB
-        alarmManager.set(AlarmManager.RTC_WAKEUP,  System.currentTimeMillis()  + 5000, pendingIntent);
-**/
-
         AlarmManager mgrAlarm = (AlarmManager) this.getSystemService(ALARM_SERVICE);
         ArrayList<PendingIntent> intentArray = new ArrayList<PendingIntent>();
 
-        for(int i = 1; i < 2; ++i)
-        {
+        for (int i = 1; i < 2; ++i) {
 
             // check for updates
 
-            if(i==1)
-            {
+            if (i == 1) {
                 checkUpdates();
             }
 
-            System.out.println("alarm counter"+i);
-            // BroadCase Receiver Intent Object
+            System.out.println("alarm counter" + i);
             Intent alarmIntent = new Intent(getApplicationContext(), SampleBC.class);
-            // Pending Intent Object
             PendingIntent pendingIntent = PendingIntent.getBroadcast(getApplicationContext(), 0, alarmIntent, PendingIntent.FLAG_UPDATE_CURRENT);
-            // Alarm Manager Object
             AlarmManager alarmManager = (AlarmManager) getApplicationContext().getSystemService(Context.ALARM_SERVICE);
-            // Alarm Manager calls BroadCast for every Ten seconds (10 * 1000), BroadCase further calls service to check if new records are inserted in
-            // Remote MySQL DB
-            alarmManager.set(AlarmManager.RTC_WAKEUP,  System.currentTimeMillis()  + 5000, pendingIntent);
+            alarmManager.set(AlarmManager.RTC_WAKEUP, System.currentTimeMillis() + 5000, pendingIntent);
 
             intentArray.add(pendingIntent);
         }
-        // check if the device can connect to the internet
-
-
-            // restful request
         if (isOnline()) {
             requestQueue = Volley.newRequestQueue(getApplicationContext());
-
-
-
-          //  fetchPosts();
         } else {
             Toast.makeText(this, "Network isn't available", Toast.LENGTH_LONG).show();
         }
-
-
-
-
 
 
         initialise();
@@ -184,74 +133,30 @@ public class MainActivity extends ActionBarActivity
         prepareDataResource();
 
         adapter = new TextTabsAdapter(getSupportFragmentManager(), fragmentList, titleList);
-
-        // Bind Adapter to ViewPager.
         viewPager.setAdapter(adapter);
-
-        // Link ViewPager and TabLayout
         tabLayout.setupWithViewPager(viewPager);
-
-        // Uncomment the LINE BELOW to see TABS with both TEXT+ICONS
-        //setTabIcons();
-        // setup DB Connection
-
-
-        /**
-        datasource = new IndicatorsDataSource(this);
-        datasource.open();
-
-        List<Indicators> tours = datasource.findAll();
-        if (tours.size() == 0) {
-            createData();
-            tours = datasource.findAll();
-        }
-**/
-      //
-        /** ArrayAdapter<Indicators> adapter = new ArrayAdapter<Indicators>(this,
-                android.R.layout.simple_list_item_1, tours);
-        setListAdapter(adapter);
-
-        **/
-
-        // end DB Connection
-        // store the number of indicators in the native database
         nativeIndicatorItems = datasource.findAllIndicators();
 
-        System.out.println("Native Items receord count"+ nativeIndicatorItems.getCount());
-
-        //create arraylist of items in native database
-
-
+        System.out.println("Native Items receord count" + nativeIndicatorItems.getCount());
         for (nativeIndicatorItems.moveToFirst(); !nativeIndicatorItems.isAfterLast(); nativeIndicatorItems.moveToNext()) {
-
-           // nativeIndicators = new(DataItem());
             nativeList.add(nativeIndicatorItems.getLong((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_ID))));
 
         }
 
 
-        System.out.println("Show native  indicators  now..:"+nativeList.size());
+        System.out.println("Show native  indicators  now..:" + nativeList.size());
         mNavigationDrawerFragment = (NavigationDrawerFragment)
                 getSupportFragmentManager().findFragmentById(R.id.navigation_drawer);
         mTitle = getTitle();
 
-        // Set up the drawer.
         mNavigationDrawerFragment.setUp(
                 R.id.navigation_drawer,
                 (DrawerLayout) findViewById(R.id.drawer_layout));
-
-        // check for indicator item updates
-
-       // checkUpdates();
-       // fetchNewPosts();
-
-
     }
 
-    private void checkUpdates()
-    {
+    private void checkUpdates() {
 
-        Log.d(TAG_UPDATE , "Updating....");
+        Log.d(TAG_UPDATE, "Updating....");
 
         datasource = new IndicatorsDataSource(this);
         datasource.open();
@@ -260,35 +165,33 @@ public class MainActivity extends ActionBarActivity
 
         System.out.println("No. of Indicators " + indicatorItems.getCount());
 
-        if(indicatorItems != null) {
+        if (indicatorItems != null) {
 
 
             if (indicatorItems.moveToFirst()) {
                 do {
-                //    indicatorItems.getString(indicatorItems.getColumnIndex("title")); // "Title" is the field name(column) of the Table
-                 //   System.out.println("Update Title.. " + indicatorItems.getString(indicatorItems.getColumnIndex("updated_on")));
+                    //    indicatorItems.getString(indicatorItems.getColumnIndex("title")); // "Title" is the field name(column) of the Table
+                    //   System.out.println("Update Title.. " + indicatorItems.getString(indicatorItems.getColumnIndex("updated_on")));
                     timeStampToMilliSeconds(indicatorItems.getString(indicatorItems.getColumnIndex("updated_on")));
                     nativeDBTimeStamp = timeStampToMilliSeconds(indicatorItems.getString(indicatorItems.getColumnIndex("updated_on")));
-             //   System.out.println("Native MilliSeconds.. " + nativeDBTimeStamp);
-                    syncSQLiteMySQLDB(indicatorItems.getString(indicatorItems.getColumnIndex("indicatorId")),indicatorItems.getString(indicatorItems.getColumnIndex("updated_on")));
-                 } while (indicatorItems.moveToNext());
+                    //   System.out.println("Native MilliSeconds.. " + nativeDBTimeStamp);
+                    syncSQLiteMySQLDB(indicatorItems.getString(indicatorItems.getColumnIndex("indicatorId")), indicatorItems.getString(indicatorItems.getColumnIndex("updated_on")));
+                } while (indicatorItems.moveToNext());
             }
 
 
         }
 
 
-
-
     }
 
     // check for updates for each indicator
 
-    public void syncSQLiteMySQLDB(final String id , final String timestamp) {
+    public void syncSQLiteMySQLDB(final String id, final String timestamp) {
 
         System.out.println("checking for Indicator Updates");
 
-       // prgDialog.show();
+        // prgDialog.show();
         StringRequest stringRequest = new StringRequest(com.android.volley.Request.Method.POST, json_updates_for_indicators,
                 new com.android.volley.Response.Listener<String>() {
                     @Override
@@ -312,11 +215,11 @@ public class MainActivity extends ActionBarActivity
                          }\
                          **/
 
-                        System.out.println("Indicator Sync Status"+response);
+                        System.out.println("Indicator Sync Status" + response);
                         // Toast.makeText(getApplication(), response, Toast.LENGTH_LONG).show();
 
                         showIndicatorJson(response);
-                       // mItemAdapter.notifyDataSetChanged();
+                        // mItemAdapter.notifyDataSetChanged();
 
                         /**
                          Intent mainIntent = new Intent(OutletsActivity2.this, MainActivity.class);
@@ -335,7 +238,7 @@ public class MainActivity extends ActionBarActivity
             protected Map<String, String> getParams() {
                 Map<String, String> params = new HashMap<String, String>();
 
-                System.out.println("query values"+id+timestamp);
+                System.out.println("query values" + id + timestamp);
 
                 params.put("id", id);
                 params.put("timestamp", timestamp);
@@ -351,16 +254,14 @@ public class MainActivity extends ActionBarActivity
     }
 
 
-
     private void fetchPosts() {
         StringRequest request = new StringRequest(Request.Method.GET, ENDPOINT, onPostsLoaded, onPostsError);
         requestQueue.add(request);
     }
 
     // handle sync json for outlets
-    public void showIndicatorJson(String response)
-    {
-        Log.d("TAG",response);
+    public void showIndicatorJson(String response) {
+        Log.d("TAG", response);
 
         ArrayList<HashMap<String, String>> indicatorsynclist;
         indicatorsynclist = new ArrayList<HashMap<String, String>>();
@@ -369,32 +270,29 @@ public class MainActivity extends ActionBarActivity
         try {
             // Extract JSON array from the response
             JSONArray arr = new JSONArray(response);
-            System.out.println("response Length"+arr.length());
+            System.out.println("response Length" + arr.length());
             // If no of array elements is not zero
-            if(arr.length() != 0){
+            if (arr.length() != 0) {
                 // Loop through each array element, get JSON object which has userid and username
                 for (int i = 0; i < arr.length(); i++) {
                     // Get JSON object
                     JSONObject obj = (JSONObject) arr.get(i);
-                    System.out.println("Unsync Returns" + obj.get("id")+ obj.get("timestamp")+ "Status" + obj.get("update"));
+                    System.out.println("Unsync Returns" + obj.get("id") + obj.get("timestamp") + "Status" + obj.get("update"));
 
                     String update_status = obj.getString("update");
 
-                    System.out.println("Remote Up :"+update_status);
+                    System.out.println("Remote Up :" + update_status);
 
-                    if(update_status.equals("true"))
-                    {
+                    if (update_status.equals("true")) {
                         System.out.println("Update Available");
 
                         // update indicator item
                         updateIndicator(response);
                         // update items  from here
-                    }
-                    else
-                    {
+                    } else {
                         System.out.println("Item  is up to date");
                     }
-                 //   System.out.println(obj.get("timestamp"));
+                    //   System.out.println(obj.get("timestamp"));
                     // DB QueryValues Object to insert into SQLite
                     // queryValues = new HashMap<String, String>();
                     // Add userID extracted from Object
@@ -406,16 +304,16 @@ public class MainActivity extends ActionBarActivity
                     // Add userName extracted from Object
                     // queryValues.put("qty_type", obj.get("qty_type").toString());
                     // Insert User into SQLite DB
-                 //   mDataSource.insertRemoteOutlet(queryValues);
+                    //   mDataSource.insertRemoteOutlet(queryValues);
 
 
                     // controller.insertUser(queryValues);
 //                    // Add status for each User in Hashmap
 //                  //  map.put("status", "1");
-                  //  outletsynclist.add(map);
+                    //  outletsynclist.add(map);
                 }
                 // Inform Remote MySQL DB about the completion of Sync activity by passing Sync status of Users
-               // updateMySQLSyncSts(gson.toJson(outletsynclist));
+                // updateMySQLSyncSts(gson.toJson(outletsynclist));
                 // Reload the Main Activity
                 // reloadActivity();
             }
@@ -427,7 +325,7 @@ public class MainActivity extends ActionBarActivity
 
 // update native indicator items
 
-    public void updateIndicator(String response){
+    public void updateIndicator(String response) {
         ArrayList<HashMap<String, String>> itemsynclist;
         itemsynclist = new ArrayList<HashMap<String, String>>();
         // Create GSON object
@@ -435,13 +333,13 @@ public class MainActivity extends ActionBarActivity
         try {
             // Extract JSON array from the response
             JSONArray arr = new JSONArray(response);
-            System.out.println("Item update json :"+response);
+            System.out.println("Item update json :" + response);
             System.out.println(arr.length());
             // If no of array elements is not zero
 
-            ArrayList<String> UpdateIndicators = new ArrayList<String>() ;
+            ArrayList<String> UpdateIndicators = new ArrayList<String>();
 
-            if(arr.length() != 0){
+            if (arr.length() != 0) {
                 // Loop through each array element, get JSON object which has userid and username
 
 
@@ -455,7 +353,7 @@ public class MainActivity extends ActionBarActivity
                     // DB QueryValues Object to insert into SQLite
                     queryValues = new HashMap<String, String>();
                     // Add userID extracted from Object
-                    System.out.println("update item ID"+obj.getString("id"));
+                    System.out.println("update item ID" + obj.getString("id"));
 
                     //obj.get("id");
 
@@ -463,7 +361,7 @@ public class MainActivity extends ActionBarActivity
 
                     queryValues.put("title", obj.getString("title"));
 
-                    queryValues.put("headline",obj.getString("headline"));
+                    queryValues.put("headline", obj.getString("headline"));
                     queryValues.put("summary", obj.getString("summary"));
                     queryValues.put("unit", obj.getString("unit"));
                     queryValues.put("description", obj.getString("description"));
@@ -472,7 +370,7 @@ public class MainActivity extends ActionBarActivity
                     queryValues.put("url", obj.getString("url"));
 
                     queryValues.put("updated_on", obj.getString("updated_on"));
-                    queryValues.put("change_type",obj.getString("change_type"));
+                    queryValues.put("change_type", obj.getString("change_type"));
                     queryValues.put("change_value", obj.getString("change_value"));
                     queryValues.put("change_desc", obj.getString("change_desc"));
 
@@ -505,37 +403,34 @@ public class MainActivity extends ActionBarActivity
                      // obj.getString("cat_id"));
                      */
 
-                     UpdateIndicators.add(obj.getString("id"));
-                     UpdateIndicators.add(obj.getString("title"));
-                     UpdateIndicators.add(obj.getString("headline"));
-                     UpdateIndicators.add(obj.getString("summary"));
-                     UpdateIndicators.add(obj.getString("unit"));
-                     UpdateIndicators.add(obj.getString("description"));
-                     UpdateIndicators.add(obj.getString("data"));
-                     UpdateIndicators.add(obj.getString("period"));
-                     UpdateIndicators.add(obj.getString("url"));
-                     UpdateIndicators.add(obj.getString("updated_on"));
-                     UpdateIndicators.add(obj.getString("change_type"));
-                     UpdateIndicators.add(obj.getString("change_value"));
-                     UpdateIndicators.add(obj.getString("change_desc"));
-                     UpdateIndicators.add(obj.getString("index_value"));
-                     UpdateIndicators.add(obj.getString("cat_id"));
+                    UpdateIndicators.add(obj.getString("id"));
+                    UpdateIndicators.add(obj.getString("title"));
+                    UpdateIndicators.add(obj.getString("headline"));
+                    UpdateIndicators.add(obj.getString("summary"));
+                    UpdateIndicators.add(obj.getString("unit"));
+                    UpdateIndicators.add(obj.getString("description"));
+                    UpdateIndicators.add(obj.getString("data"));
+                    UpdateIndicators.add(obj.getString("period"));
+                    UpdateIndicators.add(obj.getString("url"));
+                    UpdateIndicators.add(obj.getString("updated_on"));
+                    UpdateIndicators.add(obj.getString("change_type"));
+                    UpdateIndicators.add(obj.getString("change_value"));
+                    UpdateIndicators.add(obj.getString("change_desc"));
+                    UpdateIndicators.add(obj.getString("index_value"));
+                    UpdateIndicators.add(obj.getString("cat_id"));
 
-                  //  UpdateIndicators.add(obj.getString("id"));
+                    //  UpdateIndicators.add(obj.getString("id"));
                     // UpdateIndicators.add(obj.getString("title"));
 
-                  int update_flag =   datasource.updateIndicator(queryValues);
+                    int update_flag = datasource.updateIndicator(queryValues);
 
-                    System.out.println("update flag :"+update_flag);
+                    System.out.println("update flag :" + update_flag);
 
-                    if(update_flag == 1)
-                    {
+                    if (update_flag == 1) {
                         System.out.println("yeah....");
                         Log.d("update status", "update successful");
 
-                    }
-                    else
-                    {
+                    } else {
                         System.out.println("no yeah....");
                         Log.d("update status", "not unsuccessful");
                     }
@@ -552,7 +447,7 @@ public class MainActivity extends ActionBarActivity
 
                 int count = 0;
                 while (UpdateIndicators.size() > count) {
-                    System.out.println("Show updates...:"+UpdateIndicators.get(count));
+                    System.out.println("Show updates...:" + UpdateIndicators.get(count));
                     count++;
                 }
                 // Inform Remote MySQL DB about the completion of Sync activity by passing Sync status of Users
@@ -590,7 +485,6 @@ public class MainActivity extends ActionBarActivity
             List<SyncIndicator> syncNewIndicators = Arrays.asList(gson.fromJson(response, SyncIndicator[].class));
 
 
-
             System.out.println("check for new indicators...");
 
             Log.i("New PostActivity", syncNewIndicators.size() + " New indicators loaded.");
@@ -599,45 +493,44 @@ public class MainActivity extends ActionBarActivity
 
             List<SyncIndicator> syncIndicators = Arrays.asList(gson.fromJson(response, SyncIndicator[].class));
 
-          //  columnArray3.add();
+            //  columnArray3.add();
 
             ArrayList<DataItem> imageArray = new ArrayList<DataItem>();
 
             // REMOTE LIST
             ArrayList list = new ArrayList();
 
-             for (SyncIndicator syncIndicator : syncNewIndicators) {
-                Log.i("Indicators", syncIndicator.indicatorId + ": " + syncIndicator.title + "cat_id" +syncIndicator.cat_id);
-                 list.add(syncIndicator.indicatorId);
-               // System.out.println("Indicators"+syncIndicator.indicatorId + ": " + syncIndicator.title + syncIndicator.change_type);
+            for (SyncIndicator syncIndicator : syncNewIndicators) {
+                Log.i("Indicators", syncIndicator.indicatorId + ": " + syncIndicator.title + "cat_id" + syncIndicator.cat_id);
+                list.add(syncIndicator.indicatorId);
+                // System.out.println("Indicators"+syncIndicator.indicatorId + ": " + syncIndicator.title + syncIndicator.change_type);
 
-                 Long obj = new Long(syncIndicator.indicatorId);
-                 int i = obj.intValue();
-               //  Integer remoteItemId = Integer.valueOf(syncIndicator.indicatorId.intValue());
-                 Indicator indicator = new Indicator(syncIndicator.indicatorId, syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on,syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id);
+                Long obj = new Long(syncIndicator.indicatorId);
+                int i = obj.intValue();
+                //  Integer remoteItemId = Integer.valueOf(syncIndicator.indicatorId.intValue());
+                Indicator indicator = new Indicator(syncIndicator.indicatorId, syncIndicator.title, syncIndicator.headline, syncIndicator.summary, syncIndicator.unit, syncIndicator.description, syncIndicator.data, syncIndicator.period, syncIndicator.url, syncIndicator.updated_on, syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id);
 
-                 columnArray3.add(indicator);
+                columnArray3.add(indicator);
                 // String a[] = new String[]{"abc","klm","xyz","pqr"};
 
-               //  List list1 = Arrays.asList(a);
+                //  List list1 = Arrays.asList(a);
                 // Collection<String> listOne = new ArrayList(Arrays.asList("a","b", "c", "d", "e", "f", "g"));
 
 
-               //  columnArray3.add();
+                //  columnArray3.add();
 
 
                 //  datasource.create(syncIndicator);
                 // datasource.insertIndicator(syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on,syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id);
-               //  DataItem remoteItems = new DataItem(syncIndicator.indicatorId, syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on,syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id);
+                //  DataItem remoteItems = new DataItem(syncIndicator.indicatorId, syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on,syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id);
 
-              //   String item_id = String.valueOf(syncIndicator.indicatorId);
-               //  columnArray3.add(new DataItem(syncIndicator.indicatorId, syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on,syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id));
+                //   String item_id = String.valueOf(syncIndicator.indicatorId);
+                //  columnArray3.add(new DataItem(syncIndicator.indicatorId, syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on,syncIndicator.change_type, syncIndicator.change_value, syncIndicator.change_desc, syncIndicator.index_value, syncIndicator.cat_id));
 
-             }
+            }
 
-            if(columnArray3.size() > 0)
-            {
-                System.out.println("Remote Item count"+list.size()+" ...  Native  table Items"+nativeList.size());
+            if (columnArray3.size() > 0) {
+                System.out.println("Remote Item count" + list.size() + " ...  Native  table Items" + nativeList.size());
                 //nativeIndicators
 
                 // remove duplicate items from remote item arraylist
@@ -646,18 +539,18 @@ public class MainActivity extends ActionBarActivity
 
                 // unique items
 
-               // System.out.println("unique items   :"+nativeIndicators + columnArray3);
+                // System.out.println("unique items   :"+nativeIndicators + columnArray3);
 
                 //iterate through indicators that appear in the remote database
 
                 for (int i = 0; i < list.size(); i++) {
-                    System.out.println("rEMOTE  ITEMS"+list.get(i));
+                    System.out.println("rEMOTE  ITEMS" + list.get(i));
                 }
 
                 //iterate through indicators that appear in the native database
 
                 for (int i = 0; i < nativeList.size(); i++) {
-                    System.out.println("NATIVE  ITEMS"+nativeList.get(i));
+                    System.out.println("NATIVE  ITEMS" + nativeList.get(i));
                 }
 
                 // retreive the updated ids that appear in the remote database
@@ -666,17 +559,14 @@ public class MainActivity extends ActionBarActivity
 
                 // fetch updated ids from remote database and update the native database
                 for (int i = 0; i < list.size(); i++) {
-                    System.out.println("rEMOTE  ITEMS unique"+list.get(i));
+                    System.out.println("rEMOTE  ITEMS unique" + list.get(i));
                 }
 
-                System.out.println("UNIQUE ITEMS"+list.size());
+                System.out.println("UNIQUE ITEMS" + list.size());
 
-                if(columnArray3.size() > nativeIndicatorItems.getCount())
-                {
+                if (columnArray3.size() > nativeIndicatorItems.getCount()) {
                     System.out.println("New item available in remote database");
-                }
-                else
-                {
+                } else {
                     System.out.println("Native and Remote Database are upto Date");
                 }
             }
@@ -693,13 +583,11 @@ public class MainActivity extends ActionBarActivity
     };
 
 
-
     // convert timestamp to milli Seconds
 
-    private long timeStampToMilliSeconds(String timeStamp)
-    {
+    private long timeStampToMilliSeconds(String timeStamp) {
         // convert string to  long
-       // long timeStampMilliSec = Long.valueOf(timeStamp);
+        // long timeStampMilliSec = Long.valueOf(timeStamp);
 
         //Log.i(TAG_UPDATE, "--"+timeStampMilliSec+"--");
         Date stringMilliSec = null;
@@ -716,8 +604,9 @@ public class MainActivity extends ActionBarActivity
             System.out.println("Milliseconds==" + stringMilliSec.getTime());
 
         }
-        return  stringMilliSec.getTime() ;
+        return stringMilliSec.getTime();
     }
+
     private final Response.Listener<String> onPostsLoaded = new Response.Listener<String>() {
         @Override
         public void onResponse(String response) {
@@ -726,15 +615,15 @@ public class MainActivity extends ActionBarActivity
             gsonBuilder.setDateFormat("M/d/yy hh:mm a");
             gson = gsonBuilder.create();
 
-           // Log.i("PostActivity", response );
+            // Log.i("PostActivity", response );
             //List<Indicators> indicators = Arrays.asList(gson.fromJson(response, SyncIndicator[].class));
             List<SyncIndicator> syncIndicators = Arrays.asList(gson.fromJson(response, SyncIndicator[].class));
 
             Log.i("PostActivity", syncIndicators.size() + " indicators loaded.");
             for (SyncIndicator syncIndicator : syncIndicators) {
                 Log.i("Indicators", syncIndicator.indicatorId + ": " + syncIndicator.title);
-              //  datasource.create(syncIndicator);
-             //   datasource.insertIndicator(syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on);
+                //  datasource.create(syncIndicator);
+                //   datasource.insertIndicator(syncIndicator.title,syncIndicator.headline,syncIndicator.summary,syncIndicator.unit,syncIndicator.description,syncIndicator.data,syncIndicator.period,syncIndicator.url,syncIndicator.updated_on);
             }
 
         }
@@ -758,29 +647,26 @@ public class MainActivity extends ActionBarActivity
     }
 
 
-
-   // function to check if the mobile device can access internet
-
-
+    // function to check if the mobile device can access internet
 
 
     // Initialise Activity Data.
-private void initialise() {
-    Toolbar toolbar = (Toolbar) findViewById(R.id.toolbar);
-   // toolbar.setTitle("Simple Tabs Example");
+    private void initialise() {
+        Toolbar toolbar = (Toolbar) findViewById(R.id.toolbar);
+        // toolbar.setTitle("Simple Tabs Example");
 
-    viewPager = (ViewPager) findViewById(R.id.viewPager);
-    tabLayout = (TabLayout) findViewById(R.id.tabs);
+        viewPager = (ViewPager) findViewById(R.id.viewPager);
+        tabLayout = (TabLayout) findViewById(R.id.tabs);
 
-    // restful api call to connect to indicator database
-}
+        // restful api call to connect to indicator database
+    }
 
 
     // Let's prepare Data for our Tabs - Fragments and Title List
     private void prepareDataResource() {
 
         addData(new TabsFragmentOne(), "Key Enonomic Indicators");
-     //   addData(new TabsFragmentTwo(), "Categories");
+        //   addData(new TabsFragmentTwo(), "Categories");
         addData(new TabsFragmentThree(), "Census 2014");
     }
 
@@ -788,6 +674,7 @@ private void initialise() {
         fragmentList.add(fragment);
         titleList.add(title);
     }
+
     @Override
     public void onNavigationDrawerItemSelected(int position) {
         // update the main content by replacing fragments
@@ -797,12 +684,12 @@ private void initialise() {
         Integer SECTION_NUMBER = position;
 
 
-        if(position == 1) {
+        if (position == 1) {
 
-        //    Toast.makeText(getApplicationContext(), "" + position + "ID",
-          //          Toast.LENGTH_SHORT).show();
-                    //  Toast.makeText(getApplicationContext(),"" + position + "ID" ,
-                    //        Toast.LENGTH_SHORT).show();
+            //    Toast.makeText(getApplicationContext(), "" + position + "ID",
+            //          Toast.LENGTH_SHORT).show();
+            //  Toast.makeText(getApplicationContext(),"" + position + "ID" ,
+            //        Toast.LENGTH_SHORT).show();
 
             FragmentOne fragment = new FragmentOne();
 
@@ -814,11 +701,9 @@ private void initialise() {
             fragmentTransaction.replace(R.id.container, fragment.newInstance(position + 1));
             fragmentTransaction.commit();
 
-        }
-
-        else if (position == 2) {
-        //    Toast.makeText(getApplicationContext(), "" + position + "ID",
-          //          Toast.LENGTH_SHORT).show();
+        } else if (position == 2) {
+            //    Toast.makeText(getApplicationContext(), "" + position + "ID",
+            //          Toast.LENGTH_SHORT).show();
 
             FragmentTwo fragment = new FragmentTwo();
 
@@ -830,8 +715,7 @@ private void initialise() {
             fragmentTransaction.replace(R.id.container, fragment.newInstance(position + 1));
             fragmentTransaction.commit();
 
-        }
-       else if(position == 3) {
+        } else if (position == 3) {
             Toast.makeText(getApplicationContext(), "" + position + "ID",
                     Toast.LENGTH_SHORT).show();
 /*
@@ -845,10 +729,8 @@ private void initialise() {
             fragmentTransaction.replace(R.id.container, fragment.newInstance(position + 1));
             fragmentTransaction.commit();
             */
-        }
-
-        else {
-          //  Toast.makeText(getApplicationContext(), "" + position + "ID",
+        } else {
+            //  Toast.makeText(getApplicationContext(), "" + position + "ID",
             //        Toast.LENGTH_SHORT).show();
             FragmentManager fragmentManager = getSupportFragmentManager();
             fragmentManager.beginTransaction()
@@ -904,7 +786,7 @@ private void initialise() {
             return true;
         }
         if (id == R.id.action_update) {
-               Toast.makeText(getApplicationContext(), "You selected updates", Toast.LENGTH_LONG).show();
+            Toast.makeText(getApplicationContext(), "You selected updates", Toast.LENGTH_LONG).show();
 
             updateNativeIndicators = datasource.findAllIndicators();
 
@@ -912,7 +794,7 @@ private void initialise() {
 
                 // nativeIndicators = new(DataItem());
 
-              //  nativeListOrg.add(nativeIndicatorItems.getLong((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_ID))));
+                //  nativeListOrg.add(nativeIndicatorItems.getLong((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_ID))));
 
                 Indicator indicator = new Indicator(
                         nativeIndicatorItems.getLong((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_ID))),
@@ -932,11 +814,10 @@ private void initialise() {
                         nativeIndicatorItems.getString((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_INDEX_CATEGORY_ID))));
 
 
+                syncSQLiteMySQLDB(String.valueOf(nativeIndicatorItems.getLong((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_ID)))), nativeIndicatorItems.getString((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_UPDATED_ON))));
 
-                syncSQLiteMySQLDB(String.valueOf(nativeIndicatorItems.getLong((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_ID)))),nativeIndicatorItems.getString((nativeIndicatorItems.getColumnIndex(IndicatorsDBOpenHelper.COLUMN_UPDATED_ON))));
 
-
-              ///  nativeItems.add(indicator);
+                ///  nativeItems.add(indicator);
 
             }
 
@@ -973,7 +854,7 @@ private void initialise() {
         @Override
         public View onCreateView(LayoutInflater inflater, ViewGroup container,
                                  Bundle savedInstanceState) {
-          //  View rootView = inflater.inflate(R.layout.fragment_main, container, false);
+            //  View rootView = inflater.inflate(R.layout.fragment_main, container, false);
 
             View rootView = inflater.inflate(R.layout.fragment_main, container, false);
             return rootView;
